<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2buntu</string>
    <string name="description_gravatar">User Gravatar</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_comments">Comments</string>
    <string name="action_print">Print</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="activity_settings">2buntu Settings</string>
    <string name="intent_share_article">Share article via</string>
    <string name="title_refresh_interval">Refresh Interval</string>
    <string name="title_sound">Sound</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_refresh_interval">How often the app should check for new articles</string>
    <string name="summary_sound">Sound to play when new articles are published</string>
    <string name="summary_vibrate">Vibrate when new articles are published</string>

</resources>
