<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <ListPreference
        android:key="refresh_interval"
        android:title="@string/title_refresh_interval"
        android:summary="@string/summary_refresh_interval"
        android:dialogTitle="@string/title_refresh_interval"
        android:entries="@array/intervals"
        android:entryValues="@array/interval_values"
        android:defaultValue="1800000" />
    
    <RingtonePreference
        android:key="sound"
        android:title="@string/title_sound"
        android:summary="@string/summary_sound"
        android:ringtoneType="notification" />
    
    <CheckBoxPreference
        android:key="vibrate"
        android:title="@string/title_vibrate"
        android:summary="@string/summary_vibrate"
        android:defaultValue="false" />

</PreferenceScreen>
